Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-22 23:05+0200\n"
-"PO-Revision-Date: 2010-08-23 10:32+0200\n"
+"PO-Revision-Date: 2010-08-23 10:37+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7536,6 +7536,11 @@ msgid ""
 "ignore all databases by default and allow only certain databases to be "
 "replicated. Please select the mode:"
 msgstr ""
+"Šis serveris nesukonfigūruotas kaip pagrindinio serverio dauginimo procesas. "
+"Jūs galite pasirinkti vieną iš dviejų: dauginti visas duombazes ir "
+"ignoruoti kažkurias (naudinga kai Jūs dauginate didžiąją dalį duombazių) "
+"arba Jūs galite pasirinkti ignoruoti visas duombazes ir pasirinkti kažkurias "
+"duombazes dauginimui. Prašome pasirinkti režimą:"
 
 #: server_replication.php:219
 msgid "Replicate all databases; Ignore:"
