Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-22 23:05+0200\n"
-"PO-Revision-Date: 2010-08-23 10:41+0200\n"
+"PO-Revision-Date: 2010-08-23 10:45+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -7680,9 +7680,8 @@ msgid ""
 msgstr ""
 
 #: server_status.php:42
-#, fuzzy
 msgid "How many temporary files mysqld has created."
-msgstr "Kiek daug laikinų failų mysqld sukūrė."
+msgstr "Kiek laikinųjų failų mysqld sukūrė."
 
 #: server_status.php:43
 msgid ""
