Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-22 23:05+0200\n"
-"PO-Revision-Date: 2010-08-23 10:52+0200\n"
+"PO-Revision-Date: 2010-08-23 10:54+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -8218,7 +8218,7 @@ msgstr "Užklausų saugykla"
 
 #: server_status.php:362
 msgid "Threads"
-msgstr ""
+msgstr "Gijos"
 
 #: server_status.php:364
 msgid "Temporary data"
