--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-22 23:05+0200\n"
-"PO-Revision-Date: 2010-08-23 10:55+0200\n"
+"PO-Revision-Date: 2010-08-23 10:56+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -8291,6 +8291,8 @@ msgstr ""
 #: server_status.php:472
 msgid "This MySQL server works as <b>master</b> in <b>replication</b> process."
 msgstr ""
+"Šis MySQL serveris veikia kaip <b>pagrindinis</b> serveris <b>dauginimo</b> "
+"procese"
 
 #: server_status.php:474
 msgid "This MySQL server works as <b>slave</b> in <b>replication</b> process."
