--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-22 23:05+0200\n"
-"PO-Revision-Date: 2010-08-23 10:58+0200\n"
+"PO-Revision-Date: 2010-08-23 10:59+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -8378,7 +8378,7 @@ msgstr "Užklausos tipas"
 
 #: server_status.php:831
 msgid "Replication status"
-msgstr "Replikacijos būsena"
+msgstr "Dauginimo būsena"
 
 #: server_synchronize.php:92
 #, fuzzy
