--- a/po/lt.po
+++ b/po/lt.po
@@ -8667,6 +8667,8 @@ msgid ""
 "A newer version of phpMyAdmin is available and you should consider "
 "upgrading. The newest version is %s, released on %s."
 msgstr ""
+"Nauja phpMyAdmin versija prieinama ir Jūs turėtumėte apsvarstyti "
+"atnaujinimą. Naujausia versija yra %s, išleista %s."
 
 #: setup/lib/index.lib.php:162
 #, php-format
