Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-22 23:05+0200\n"
-"PO-Revision-Date: 2010-08-23 11:06+0200\n"
+"PO-Revision-Date: 2010-08-23 11:07+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -8864,7 +8864,7 @@ msgstr "Dėl jo ilgio,<br /> šis laukelis neredaguojamas "
 
 #: tbl_change.php:835
 msgid "Remove BLOB Repository Reference"
-msgstr ""
+msgstr "Panaikinti BLOB saugyklos rodyklę"
 
 #: tbl_change.php:841
 msgid "Binary - do not edit"
