--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-22 23:05+0200\n"
-"PO-Revision-Date: 2010-08-23 11:07+0200\n"
+"PO-Revision-Date: 2010-08-23 11:08+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -8883,9 +8883,8 @@ msgid "Insert as new row and ignore errors"
 msgstr "Įterpti kaip naują eilutę ir ignoruoti klaidas"
 
 #: tbl_change.php:1028
-#, fuzzy
 msgid "Show insert query"
-msgstr "Rodoma SQL užklausa"
+msgstr "Rodyti įterptą užklausą"
 
 #: tbl_change.php:1043
 msgid "Go back to previous page"
