Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-22 23:05+0200\n"
-"PO-Revision-Date: 2010-08-23 11:09+0200\n"
+"PO-Revision-Date: 2010-08-23 11:12+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -8933,7 +8933,7 @@ msgstr "Pirminio rakto pavadinimas turi būti \"PRIMARY\"!"
 
 #: tbl_indexes.php:74
 msgid "Can't rename index to PRIMARY!"
-msgstr "Indeksą pervadinti PIRMINIU nepavyko!"
+msgstr "Negalima pervadinti indekso į PRIMARY!"
 
 #: tbl_indexes.php:90
 msgid "No index parts defined!"
