Changelog and credits for schema export.

--- a/ChangeLog
+++ b/ChangeLog
@@ -106,6 +106,7 @@ $Id$
   thanks to Hauke Henningsen - blubberkeks152
 - rfe #2973909 Users preferences
 - [relations] Dropped WYSIWYG-PDF configuration variable.
+- rfe #806035, #686260 [relations] Export relations to Dia, SVG and others
 
 3.3.6.0 (not yet released)
 - bug #3033063 [core] Navi gets wrong db name
