--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-22 23:05+0200\n"
-"PO-Revision-Date: 2010-08-23 11:13+0200\n"
+"PO-Revision-Date: 2010-08-23 11:17+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -9033,10 +9033,9 @@ msgid "Table %s has been flushed"
 msgstr "Lentelės buferis  %s išvalytas"
 
 #: tbl_operations.php:633
-#, fuzzy
 #| msgid "Flush the table (\"FLUSH\")"
 msgid "Flush the table (FLUSH)"
-msgstr "Išvalyti lentelę (\"FLUSH\")"
+msgstr "Išvalyti ir perkrauti lentelę (FLUSH)"
 
 #: tbl_operations.php:642
 #, fuzzy
