--- a/po/lt.po
+++ b/po/lt.po
@@ -9047,10 +9047,9 @@ msgid "Empty the table (TRUNCATE)"
 msgstr "Ištrinti lentelės duomenis (TRUNCATE)"
 
 #: tbl_operations.php:677
-#, fuzzy
 #| msgid "Go to database"
 msgid "Delete the table (DROP)"
-msgstr "Eiti į duomenų bazę"
+msgstr "Ištrinti lentelę (DROP)"
 
 #: tbl_operations.php:698
 #, fuzzy
