Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -9493,11 +9493,10 @@ msgid "Available transformations"
 msgstr "Galimos transformacijos"
 
 #: transformation_overview.php:47
-#, fuzzy
 #| msgid "Description"
 msgctxt "for MIME transformation"
 msgid "Description"
-msgstr "Paaiškinimas"
+msgstr "Aprašas"
 
 #: user_password.php:49
 msgid "You don't have sufficient privileges to be here right now!"
