--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-23 11:21+0200\n"
-"PO-Revision-Date: 2010-08-23 11:26+0200\n"
+"PO-Revision-Date: 2010-08-23 11:27+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -9501,7 +9501,7 @@ msgstr "Paaiškinimas"
 
 #: user_password.php:49
 msgid "You don't have sufficient privileges to be here right now!"
-msgstr "Neturite pakankamai teisių"
+msgstr "Neturite pakankamai teisių čia būti!"
 
 #: user_password.php:107
 msgid "The profile has been updated."
