--- a/po/bs.po
+++ b/po/bs.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-08-23 11:21+0200\n"
+"POT-Creation-Date: 2010-08-23 11:27+0200\n"
 "PO-Revision-Date: 2010-03-12 09:12+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: bosnian <bs@li.org>\n"
@@ -352,7 +352,7 @@ msgstr ""
 #: db_operations.php:531
 #, fuzzy
 #| msgid "Relational schema"
-msgid "Export Relational Schema View"
+msgid "Edit or export relational schema"
 msgstr "Relaciona shema"
 
 #: db_printview.php:102 db_tracking.php:67 db_tracking.php:152
