--- a/po/ar.po
+++ b/po/ar.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-08-23 11:21+0200\n"
+"POT-Creation-Date: 2010-08-23 11:27+0200\n"
 "PO-Revision-Date: 2010-05-29 14:16+0200\n"
 "Last-Translator: Ahmed <aa.mahdawy.10@gmail.com>\n"
 "Language-Team: arabic <ar@li.org>\n"
@@ -351,7 +351,7 @@ msgstr ""
 #: db_operations.php:531
 #, fuzzy
 #| msgid "Relational schema"
-msgid "Export Relational Schema View"
+msgid "Edit or export relational schema"
 msgstr "بناء الارتباطات"
 
 #: db_printview.php:102 db_tracking.php:67 db_tracking.php:152
