--- a/po/it.po
+++ b/po/it.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-08-23 11:21+0200\n"
+"POT-Creation-Date: 2010-08-23 11:27+0200\n"
 "PO-Revision-Date: 2010-08-22 19:39+0200\n"
 "Last-Translator:  <rebeluca@gmail.com>\n"
 "Language-Team: italian <it@li.org>\n"
@@ -343,7 +343,7 @@ msgstr ""
 #: db_operations.php:531
 #, fuzzy
 #| msgid "Relational schema"
-msgid "Export Relational Schema View"
+msgid "Edit or export relational schema"
 msgstr "Schema relazionale"
 
 #: db_printview.php:102 db_tracking.php:67 db_tracking.php:152
