--- a/po/ko.po
+++ b/po/ko.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-08-23 11:21+0200\n"
+"POT-Creation-Date: 2010-08-23 11:27+0200\n"
 "PO-Revision-Date: 2010-06-16 18:18+0200\n"
 "Last-Translator:  <cihar@nvyu.net>\n"
 "Language-Team: korean <ko@li.org>\n"
@@ -347,7 +347,7 @@ msgstr ""
 "%s여기를 클릭%s하십시오."
 
 #: db_operations.php:531
-msgid "Export Relational Schema View"
+msgid "Edit or export relational schema"
 msgstr ""
 
 #: db_printview.php:102 db_tracking.php:67 db_tracking.php:152
