--- a/po/phpmyadmin.pot
+++ b/po/phpmyadmin.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-08-23 11:21+0200\n"
+"POT-Creation-Date: 2010-08-23 11:27+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -339,7 +339,7 @@ msgid ""
 msgstr ""
 
 #: db_operations.php:531
-msgid "Export Relational Schema View"
+msgid "Edit or export relational schema"
 msgstr ""
 
 #: db_printview.php:102 db_tracking.php:67 db_tracking.php:152
