--- a/po/te.po
+++ b/po/te.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-08-23 11:21+0200\n"
+"POT-Creation-Date: 2010-08-23 11:27+0200\n"
 "PO-Revision-Date: 2010-05-26 14:20+0200\n"
 "Last-Translator:  <veeven@gmail.com>\n"
 "Language-Team: Telugu <te@li.org>\n"
@@ -348,7 +348,7 @@ msgid ""
 msgstr ""
 
 #: db_operations.php:531
-msgid "Export Relational Schema View"
+msgid "Edit or export relational schema"
 msgstr ""
 
 #: db_printview.php:102 db_tracking.php:67 db_tracking.php:152
