--- a/po/ug.po
+++ b/po/ug.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-08-23 11:21+0200\n"
+"POT-Creation-Date: 2010-08-23 11:27+0200\n"
 "PO-Revision-Date: 2010-07-30 11:41+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
@@ -342,8 +342,10 @@ msgstr ""
 "%sبۇ يەرنى كۆرۈڭ%s."
 
 #: db_operations.php:531
-msgid "Export Relational Schema View"
-msgstr ""
+#, fuzzy
+#| msgid "Display PDF schema"
+msgid "Edit or export relational schema"
+msgstr "PDF تىزىىسىنى كۆرسىتىش"
 
 #: db_printview.php:102 db_tracking.php:67 db_tracking.php:152
 #: libraries/config/messages.inc.php:483 libraries/db_structure.lib.php:37
