--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-23 11:21+0200\n"
-"PO-Revision-Date: 2010-08-23 11:27+0200\n"
+"PO-Revision-Date: 2010-08-23 11:28+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -9445,7 +9445,7 @@ msgstr ""
 
 #: tbl_tracking.php:649
 msgid "Activate now"
-msgstr ""
+msgstr "Aktyvuoti dabar"
 
 #: tbl_tracking.php:662
 #, php-format
