--- a/po/cs.po
+++ b/po/cs.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-23 11:27+0200\n"
-"PO-Revision-Date: 2010-08-23 11:29+0200\n"
+"PO-Revision-Date: 2010-08-23 11:30+0200\n"
 "Last-Translator: Michal Čihař <michal@cihar.com>\n"
 "Language-Team: czech <cs@li.org>\n"
 "Language: cs\n"
@@ -1952,7 +1952,7 @@ msgstr "rozšířené inserty"
 
 #: libraries/config.values.php:121
 msgid "both of the above"
-msgstr ""
+msgstr "oba výše uvedené"
 
 #: libraries/config.values.php:122
 msgid "neither of the above"
