Translation update done using Pootle.

--- a/po/cs.po
+++ b/po/cs.po
@@ -2000,7 +2000,7 @@ msgstr "nedostupné"
 #: libraries/config/FormDisplay.class.php:733
 #, php-format
 msgid "\"%s\" requires %s extension"
-msgstr ""
+msgstr "\"%s\" vyžaduje rozšíření %s"
 
 #: libraries/config/FormDisplay.class.php:747
 #, php-format
