--- a/po/cs.po
+++ b/po/cs.po
@@ -2010,7 +2010,7 @@ msgstr "import nebude fungovat, chybí funkce (%s)"
 #: libraries/config/FormDisplay.class.php:751
 #, php-format
 msgid "export will not work, missing function (%s)"
-msgstr ""
+msgstr "export nebude fungovat, chybí funkce (%s)"
 
 #: libraries/config/FormDisplay.class.php:758
 msgid "SQL Validator is disabled"
